Appointement start mapping
